--- a/dBASE.NET.csproj
+++ b/dBASE.NET.csproj
@@ -48,13 +48,16 @@
     <Compile Include="Dbf.cs" />
     <Compile Include="DbfVersion.cs" />
     <Compile Include="Decoders\CharacterDecoder.cs" />
+    <Compile Include="Decoders\CurrencyDecoder.cs" />
     <Compile Include="Decoders\DateDecoder.cs" />
     <Compile Include="Decoders\DateTimeDecoder.cs" />
     <Compile Include="Decoders\DecoderFactory.cs" />
     <Compile Include="Decoders\IDecoder.cs" />
     <Compile Include="Decoders\FloatDecoder.cs" />
+    <Compile Include="Decoders\IntegerDecoder.cs" />
     <Compile Include="Decoders\LogicalDecoder.cs" />
     <Compile Include="Decoders\MemoDecoder.cs" />
+    <Compile Include="Decoders\NullFlagsDecoder.cs" />
     <Compile Include="Decoders\NumericDecoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
