--- a/dBASE.NET.csproj
+++ b/dBASE.NET.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
     <None Include="README.md" />
+    <None Include="TODO.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
