--- a/dBASE.NET.Tests/.gitignore
+++ b/dBASE.NET.Tests/.gitignore
@@ -2,5 +2,5 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/obj/Debug
-/bin/Debug
+obj
+bin
