--- a/dBASE.NET.Tests/dBASE.NET.Tests.csproj
+++ b/dBASE.NET.Tests/dBASE.NET.Tests.csproj
@@ -248,6 +248,9 @@
       <Name>dBASE.NET</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
