--- a/dBASE.NET/dBASE.NET.nuspec
+++ b/dBASE.NET/dBASE.NET.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>dBASE.NET</id>
-    <version>1.2.1</version>
+    <version>1.2.2</version>
     <title>dBASE.NET</title>
     <authors>Independent Software / Alexander van Oostenrijk</authors>
     <owners>IndependentSw</owners>
@@ -11,9 +11,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>dBASE.NET is a .NET class library used to load dBASE IV .dbf files. The Dbf class reads fields (DbfField) and records (DbfRecord) from a .dbf file. These fields and records can then be accessed as lists and looped over.</description>
     <releaseNotes>
-	  Fixed buffer overflow on write operation.
-      Fixed trimming and padding on write operation.
-      Performance improve on write operation.
+      Fix reading DbfField from file with `invalid` name.
     </releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags>dBASE dbf</tags>
