--- a/dBASE.NET/dBASE.NET.csproj
+++ b/dBASE.NET/dBASE.NET.csproj
@@ -1,36 +1,55 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <ProjectGuid>{6D931BBD-E331-4A20-90E8-FF7BB2A46E8F}</ProjectGuid>
-    <AssemblyTitle>dBASE.NET</AssemblyTitle>
-    <Company>Independent Software / Alexander van Oostenrijk</Company>
-    <Product>dBASE.NET</Product>
+    <ProjectGuid>{3150cf76-5cc7-4062-bd6b-632b1058108b}</ProjectGuid>
+    <TargetFramework>net5.0</TargetFramework>
+    <OutputType>Library</OutputType>
+    <PackageId>Adeotek.dBASE.NET</PackageId>
+    <PackageTags>netopes,blazor,ui</PackageTags>
+    <Title>NETopes Blazor</Title>
     <Description>dBASE.NET is a .NET class library used to load dBASE IV .dbf files. The Dbf class reads fields (DbfField) and records (DbfRecord) from a .dbf file. These fields and records can then be accessed as lists and looped over.</Description>
-    <Copyright>Copyright 2019</Copyright>
-    <Version>1.2.2</Version>
-    <AssemblyVersion>1.2.0.0</AssemblyVersion>
-    <FileVersion>1.2.0.0</FileVersion>
+    <Product>dBASE.NET Core</Product>
+    <Company>AdeoTEK Software SRL</Company>
+    <Authors>Independent Software / Alexander van Oostenrijk / George Benjamin-Schonberger</Authors>
+    <Copyright>Copyright © AdeoTEK Software SRL 2021</Copyright>
+    <AssemblyTitle>dBASE.NET Core</AssemblyTitle>
+    <AssemblyVersion>1.3.0.0</AssemblyVersion>
+    <FileVersion>1.3.0.0</FileVersion>
+    <Version>1.3.0</Version>
+    <PackageProjectUrl>https://github.com/adeotek/dBASE.NET/</PackageProjectUrl>
+    <PackageLicense>https://github.com/adeotek/dBASE.NET/blob/main/README.md</PackageLicense>
+    <RepositoryUrl>https://github.com/adeotek/dBASE.NET/</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
+    <PackageIcon>PackageIcon.png</PackageIcon>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageVersion>1.3.0-preview.1</PackageVersion>
+    <PackageTags>dBASE dbf</PackageTags>
+    <PackageReleaseNotes>.NET 5.0 preview version</PackageReleaseNotes>
     <DocumentationFile>bin\$(Configuration)\dBASE.NET.xml</DocumentationFile>
     <OutputPath>bin\$(Configuration)\</OutputPath>
-    <Authors>Independent Software / Alexander van Oostenrijk</Authors>
-    <PackageId>dBASE.NET</PackageId>
-    <PackageLicenseUrl>https://github.com/henck/dBASE.NET/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/henck/dBASE.NET</PackageProjectUrl>
-    <PackageReleaseNotes>
-      Fix reading DbfField from file with `invalid` name.
-    </PackageReleaseNotes>
-    <PackageTags>dBASE dbf</PackageTags>
-    <TargetFrameworks>net461;net48;netstandard2.0</TargetFrameworks>
     <LangVersion>default</LangVersion>
   </PropertyGroup>
+ 
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
+  
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>dBASE.NET.key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+  
   <ItemGroup>
     <None Include=".gitignore" />
     <None Include="ClassDiagram.cd" />
     <None Include="dBASE.NET.key.snk" />
+    <None Include="../LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>/</PackagePath>
+    </None>
+    <None Include="../assets/PackageIcon.png">
+      <Pack>True</Pack>
+      <PackagePath>/</PackagePath>
+    </None>
   </ItemGroup>
+  
 </Project>
