--- a/dBASE.NET.Tests/dBASE.NET.Tests.csproj
+++ b/dBASE.NET.Tests/dBASE.NET.Tests.csproj
@@ -60,16 +60,17 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BrokenFields.cs" />
+    <Compile Include="CustomEncoding2.cs" />
     <Compile Include="CustomEncoding.cs" />
     <Compile Include="Dbase3WithMemoStreamRead.cs" />
     <Compile Include="Dbase3WithMemo.cs" />
     <Compile Include="Dbase3WithoutMemo.cs" />
     <Compile Include="DBase4WithMemo.cs" />
+    <Compile Include="DbfRecordTests.cs" />
     <Compile Include="Encoders\CharacterEncoderTests.cs" />
     <Compile Include="Encoders\DateEncoderTests.cs" />
     <Compile Include="Encoders\NumericEncoderTests.cs" />
     <Compile Include="FoxProWithMemo.cs" />
-    <Compile Include="DbfRecordTests.cs" />
     <Compile Include="VisualFoxPro.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VisualFoxProWithAI.cs" />
